# MAVez

./: .buildinfo  .gitignore  Coordinate.py  LICENSE  MAVez.py  Mission.py  Mission_Item.py  README.md  __init__.py  airdrop_detect_mission.txt  api.html  controller.html  coordinate.html  detect_mission.txt  enums.html  flight_manger.py  flight_utils.py  genindex.html  geofence.txt  index.html  landing_mission.txt  mav_controller.py  missions.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  readMe.md  search.html  searchindex.js  setup.py  takeoff_mission.txt  target_mapper.py  test_enum.py  test_mission.txt  utils.html
.github/workflows/: build-docs.yml  build_docs.yml  bump-version.yml  python-publish.yml
MAVez.egg-info/: PKG-INFO  SOURCES.txt
_sources/: enums.rst.txt  index.rst.txt  overview.rst.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  overview.rst  utils.rst
examples/: basic.py  basic_messaging.py  basic_with_zmq.py  guided.py  message_receiver.py  zmq_subscriber.py
examples/sample_missions/: airdrop_mission.txt  sample2.txt  sample_fence.txt
sample_missions/: takeoff_mission.txt
src/MAVez/: __init__.py  controller.py  coordinate.py  enums.py  flight_controller.py  mission.py  mission_item.py  safe_logger.py  translate_message.py  zmq_broker.py
src/MAVez.egg-info/: PKG-INFO  requires.txt
src/MAVez/enums/: __init__.py  mav_landed_state.py  mav_message.py  mav_mission_result.py  mav_result.py  reposition_loiter_mode.py
testing/: send_receive.py  sync_clocks.py  timesync.py
tools/: generate_enums.py
