[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='MAVez'
version='1.1.3'
description='An intuitive MAVLink library for ArduPilot via pymavlink'
authors=[
    {name='The Pennsylvania State University Unmanned Aerial Systems Club', email='psuuasofficial@gmail.com'}
]
license='GPL-3.0'
readme='README.md'
dependencies=['pymavlink>=2.4.0', 'math', 'time']
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Natural Language :: English',
]
keywords=['MAVLink', 'ArduPilot', 'UAS', 'Drone', 'pymavlink', 'MAVez']

[project.urls]
Homepage = 'https://github.com/UnmannedAerialSystems/MAVez'